--- a/gtk-3.0/Stylus/Standards/Colors/UI.styl
+++ b/gtk-3.0/Stylus/Standards/Colors/UI.styl
@@ -45,7 +45,7 @@ LinkColor                           = SpringGreen;
 
 MenuColor                           = VeryDarkGray;
 MenuBorderColor                     = DarkWhite;
-MenuTextColor                       = LightSilver;
+MenuTextColor                       = TextColor;
 MenuAcceleratorColor                = TextColorDim;
 MenuTextColorDisabled               = LightGray;
 
