--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -86,7 +86,7 @@ window:not(.csd):not(popover):not(.popup) > decoration:backdrop {
   background-color: #3e3e3e;
 }
 .dnd {
-  border: 1px solid #00c8ff;
+  border: 2px solid #00c8ff;
 }
 .overshoot,
 .undershoot {
@@ -95,30 +95,6 @@ window:not(.csd):not(popover):not(.popup) > decoration:backdrop {
   border: none;
   box-shadow: none;
   text-shadow: none;
-}
-.popup,
-.popup.background,
-tooltip,
-tooltip.background {
-  background-color: transparent;
-  background-image: none;
-  border: none;
-  box-shadow: none;
-  text-shadow: none;
-  color: #bbb;
-}
-popover,
-popover.background {
-  background-clip: border-box;
-  border-color: rgba(198,198,198,0.125);
-  border-bottom-color: rgba(36,36,36,0.125);
-  border-right-color: rgba(36,36,36,0.125);
-  border-style: solid;
-  border-width: 1px;
-  background-color: rgba(162,162,162,0.5);
-  box-shadow: 0px 0px 0px 1px #292929, -1px -1px 0px rgba(36,36,36,0.875), 3px 3px 5px rgba(0,0,0,0.25);
-  background-color: #252525;
-  border-radius: 0.5em;
 }
 decoration {
   background-color: #4b4b4b;
@@ -154,6 +130,11 @@ decoration:backdrop {
 tooltip > decoration {
   background-color: #252525;
   padding: 0px;
+}
+.rubberband,
+rubberband {
+  background-color: rgba(162,162,162,0.25);
+  border: 1px solid #96c8ff;
 }
 scrolledwindow {
   background-clip: padding-box;
@@ -213,6 +194,13 @@ row:selected:backdrop label {
 .sidebar row label {
   color: #bbb;
 }
+.sidebar row:backdrop {
+  color: #898989;
+}
+.sidebar row:backdrop image,
+.sidebar row:backdrop label {
+  color: #898989;
+}
 .sidebar row:selected {
   background-color: #00c8ff;
   color: #323232;
@@ -250,11 +238,6 @@ GtkDrawingArea {
 FooScrollArea:backdrop,
 GtkDrawingArea:backdrop {
   background-color: #323232;
-}
-rubberband {
-  background-color: rgba(162,162,162,0.5);
-  border: 1px solid #a2a2a2;
-  border-radius: 0.25em;
 }
 trough {
   background-clip: padding-box;
@@ -378,6 +361,12 @@ menu separator {
 }
 paned.horizontal > separator {
   background-image: -gtk-scaled(url("Icons/Separator-Vertical.svg"));
+}
+#panel {
+  border: 1px solid #f00;
+  background-color: #00f;
+  background-image: none;
+  color: #0f0;
 }
 button,
 button.popup {
@@ -1090,6 +1079,30 @@ menubar > menuitem,
 menubar > popover modelbutton {
   border-radius: 0.125em;
   padding: 0.25em 0.5em;
+}
+.popup,
+.popup.background,
+tooltip,
+tooltip.background {
+  background-color: transparent;
+  background-image: none;
+  border: none;
+  box-shadow: none;
+  text-shadow: none;
+  color: #bbb;
+}
+popover,
+popover.background {
+  background-clip: border-box;
+  border-color: rgba(198,198,198,0.125);
+  border-bottom-color: rgba(36,36,36,0.125);
+  border-right-color: rgba(36,36,36,0.125);
+  border-style: solid;
+  border-width: 1px;
+  background-color: rgba(162,162,162,0.5);
+  box-shadow: 0px 0px 0px 1px #292929, -1px -1px 0px rgba(36,36,36,0.875), 3px 3px 5px rgba(0,0,0,0.25);
+  background-color: #252525;
+  border-radius: 0.5em;
 }
 notebook {
   -GtkNotebook-arrow-spacing: 5;
