Changed the color of selected cell rows.

--- a/gtk-3.0/Stylus/Cells.styl
+++ b/gtk-3.0/Stylus/Cells.styl
@@ -19,12 +19,13 @@ row
     image
         color:                  SelectionColor;
     &:selected
-        background-color:       SelectionColor;
+        // background-color:       SelectionColor;
+        background-color:       HighlightColor;
         color:                  TextColorSelected;
         image, label            { color: TextColorSelected; }
 
         &:backdrop
-            background-color:   HighlightColor;
+            background-color:   HighlightColorDim;
             background-image:   none;
             button-text-color:  TextColorHighlighted;
 
