--- a/gtk-3.0/Stylus/Standards/Colors/UI.styl
+++ b/gtk-3.0/Stylus/Standards/Colors/UI.styl
@@ -33,6 +33,7 @@ GlossColorLight                     = alpha(Silver, 0.125);
 GlossColorLighter                   = alpha(White, 0.125);
 
 HighlightColor                      = Silver;
+HighlightColorDim                   = alpha(Silver, 0.625);
 HighlightTextColor                  = DarkGray;
 
 IconColor                           = Orchid;
